[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://images/backgrounds/menu.png" type="Texture" id=2]
[ext_resource path="res://fonts/old_stamper.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/veteran_typewriter.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://images/ui/bullet.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 192, 192 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="DynamicFont" id=3]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 45
use_mipmaps = false
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0.835022, 0.601563, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 15
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="DynamicFont" id=6]

size = 45
use_mipmaps = false
use_filter = false
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.125, 0.125, 0.125, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 3
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 15
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 3
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 15
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="DynamicFont" id=9]

size = 45
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Hint", "Rect" ]
GameScene = "res://scenes/Game.tscn"
ServerListScene = "res://scenes/ServerList.tscn"
PlayerName = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Name/Name")
ServerName = NodePath("MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/ServerName")
Address = NodePath("MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/IP")
Port = NodePath("MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/Port")
Error = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Error")

[node name="Black" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "Theme", "custom_styles" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Panel" parent="." index="1"]

self_modulate = Color( 0.242188, 0.242188, 0.242188, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -360.0
margin_right = 360.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 2 )
_sections_unfolded = [ "Margin", "Rect", "Theme", "Visibility", "custom_styles" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 25
custom_constants/margin_top = 390
custom_constants/margin_left = 25
custom_constants/margin_bottom = 360
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 390.0
margin_right = 695.0
margin_bottom = 920.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 90
alignment = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "custom_constants" ]

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 670.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Spies!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 670.0
margin_bottom = 442.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 670.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Name" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Codename:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Name" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/Name" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_right = 670.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Agent"
max_length = 16
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Rect", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 78.0
margin_right = 670.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Create" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_right = 209.0
margin_bottom = 96.0
rect_min_size = Vector2( 192, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Visibility", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 239.0
margin_right = 431.0
margin_bottom = 96.0
rect_min_size = Vector2( 192, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Visibility", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Browse" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 461.0
margin_right = 653.0
margin_bottom = 96.0
rect_min_size = Vector2( 192, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Browse..."
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Visibility", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CreateInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 670.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="ServerName" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 210.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 16
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Server Name"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Margin", "Placeholder", "Rect", "Size Flags", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="IP" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 230.0
margin_right = 440.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 16
focus_mode = 2
context_menu_enabled = true
placeholder_text = "IP Address"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Margin", "Placeholder", "Rect", "Size Flags", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Port" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_right = 670.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 16
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Port"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Margin", "Placeholder", "Rect", "Size Flags", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Confirm" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer" index="3"]

visible = false
self_modulate = Color( 0.741176, 0.741176, 0.741176, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 670.0
margin_bottom = 300.0
rect_min_size = Vector2( 192, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Visibility" ]

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Confirm" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -26.0
margin_right = 335.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
text = "Confirm"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Error" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 670.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="focus_exited" from="MarginContainer/VBoxContainer/VBoxContainer/Name/Name" to="." method="_on_Name_focus_exited"]

[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/Name/Name" to="." method="_on_Name_text_changed"]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Create" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Create" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/Port" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Create" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/ServerName" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Create" to="." method="_on_Create_button_down"]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Create" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/IP" method="set_visible" binds= [ false ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Create" to="MarginContainer/VBoxContainer/VBoxContainer/Confirm" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Join" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Join" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/Port" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Join" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/ServerName" method="set_visible" binds= [ false ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Join" to="." method="_on_Join_button_down"]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Join" to="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/IP" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Join" to="MarginContainer/VBoxContainer/VBoxContainer/Confirm" method="set_visible" binds= [ true ]]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Browse" to="." method="_on_Browse_button_down"]

[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/ServerName" to="." method="_on_ServerName_text_changed"]

[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/IP" to="." method="_on_IP_text_changed"]

[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/CreateInfo/Port" to="." method="_on_Port_text_changed"]

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/Confirm" to="." method="_on_Confirm_button_down"]

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/Confirm" to="MarginContainer/VBoxContainer/VBoxContainer/Confirm/Label" method="set_self_modulate" binds= [ Color( 1, 0, 0, 1 ) ]]

[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/VBoxContainer/Confirm" to="MarginContainer/VBoxContainer/VBoxContainer/Confirm/Label" method="set_self_modulate" binds= [ Color( 1, 1, 1, 1 ) ]]


